<resources>
    <string name="app_name">智能家居</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">sign_in</string>
    <string name="configuration_message">请先把设备切换到Airlink模式,再输入Wi-Fi密码,以连接您的智能设备</string>
    <string name="add_device">添加设备</string>
    <string name="choose_wifi_list_title">SSID</string>
    <string name="softPsw_hint">密码</string>
    <string name="next">下一步</string>
    <string name="five_wifi">注: 暂不支持5G频道的Wi-Fi网络</string>
    <string name="AirLinkTitle">尝试连接WIFI……</string>
    <string name="AirLinkMessage">大概需要1分钟,请耐心等待</string>
    <string name="item_01">网关设备列表</string>
    <string name="item_02">解绑列表第一个设备</string>
    <string name="menu_add">增加</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_delete">删除</string>
    <string name="main_toolbar">设备列表</string>
    <string name="checkbox">CheckBox</string>
    <string name="forget_password">忘记密码?</string>
    <string name="main2_toolbar">智能设备列表</string>
    <string name="empty">n/a</string>

    <string name="app_id">d5f2fb27495340fe81efa0682cc37ce6</string>
    <string name="product_key">c46a192ef791475e9d6c991a6b11106d</string>
    <string name="data_name">Packet</string>


    <string name="offline_broadcast">com.example.xzy.myhome.FORCE_OFFLINE</string>
    <string name="offline_alert_dialog_message">设备已掉线，请检查WIFI或检查硬件设备网络状态</string>
    <string name="offline_alert_dialog_title">提示</string>
    <string name="offline_alert_dialog_positive">重新连接</string>
    <string name="offline_alert_dialog_negative">重新登录</string>
    <string name="setting_title">设置</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="n_a">N/A</string>


</resources>
